<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activty.ReferActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/referToolbar">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wallet"
                    android:layout_width="wrap_content"
                    android:text="@string/wallet"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/addball"
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:text="@string/add_balance"
                        android:textAllCaps="false"
                        android:layout_margin="5dp"
                        android:background="@drawable/btn_background"
                        android:textColor="@android:color/white"
                        android:padding="10dp"
                        android:layout_height="match_parent"
                        style="?android:attr/buttonBarButtonStyle" />
                    <Button
                        android:id="@+id/withdraw"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:layout_margin="5dp"
                        android:text="@string/withdraw_now"
                        android:textAllCaps="false"
                        android:background="@drawable/btn_background"
                        android:textColor="@android:color/white"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/refer_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/enter_refer_code"
            android:inputType="text"
            android:maxLength="8"
            android:backgroundTint="@color/text_color_white"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:autofillHints="" />

        <Button
            android:id="@+id/verify_code_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_background"

            android:padding="10dp"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/refer_edit_text"
            app:layout_constraintStart_toStartOf="@+id/refer_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/refer_edit_text" />

        <TextView
            android:id="@+id/user_refer_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/your_refer_code"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/verify_code_btn"
            app:layout_constraintStart_toStartOf="@+id/verify_code_btn"
            app:layout_constraintTop_toBottomOf="@+id/verify_code_btn" />

        <Button
            android:id="@+id/referFriendsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_background"
            android:padding="15dp"
            android:text="@string/refer_now"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/user_refer_code"
            app:layout_constraintStart_toStartOf="@+id/user_refer_code"
            app:layout_constraintTop_toBottomOf="@+id/user_refer_code" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/referToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="My Wallet" />

        <TextView
            android:id="@+id/textView10"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:text="@string/you_are_frefered"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/referFriendsBtn"
            app:layout_constraintStart_toStartOf="@+id/referFriendsBtn"
            app:layout_constraintTop_toBottomOf="@+id/referFriendsBtn" />


        <TextView
            android:id="@+id/textView11"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:gravity="center_horizontal"
            android:text="@string/referral_friend"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>